static/resources/D-Sketon/plugin-live2d/css/live2d-mobile.css
#live2d-toggle {
	background-color: #fa0;
	border-radius: 5px;
	bottom: 10px;
	color: #fff;
	cursor: pointer;
	font-size: 12px;
	left: -10px;
	margin-left: -100px;
	padding: 5px 2px 5px 5px;
	position: fixed;
	transition: margin-left 1s;
	width: 30px;
	writing-mode: vertical-rl;
}

#live2d-toggle.live2d-toggle-active {
    margin-left: -50px;
}

#live2d-toggle.live2d-toggle-active:hover {
    margin-left: -30px;
}

#live2d-plugin {
    bottom: -1000px;
    left: 0;
    line-height: 0;
    margin-bottom: -10px;
    position: fixed;
    transform: translateY(3px);
    transition: transform .3s ease-in-out, bottom 3s ease-in-out;
    z-index: 999999;
}

@media screen and (max-width: 768px) {
    #live2d-plugin {
        z-index: 1;
        display: none;
    }
}

#live2d-plugin:hover {
    transform: translateY(0);
}

#live2d-tips {
    animation: shake 50s ease-in-out 5s infinite;
    background-color: rgba(236, 217, 188, .5);
    border: 1px solid rgba(224, 186, 140, .62);
    border-radius: 12px;
    box-shadow: 0 3px 15px 2px rgba(191, 158, 118, .2);
    font-size: 14px;
    line-height: 24px;
    margin: -30px 20px;
    min-height: 70px;
    opacity: 0;
    overflow: hidden;
    padding: 5px 10px;
    position: absolute;
    text-overflow: ellipsis;
    transition: opacity 1s;
    width: 250px;
    word-break: break-all;
}

#live2d-tips.live2d-tips-active {
    opacity: 1;
    transition: opacity .2s;
}

#live2d-tips span {
    color: #0099cc;
}

#live2d {
    cursor: grab;
    height: 300px;
    position: relative;
    width: 300px;
}

#live2d:active {
    cursor: grabbing;
}

#live2d-tool {
    color: #aaa;
    opacity: 0;
    position: absolute;
    right: -10px;
    bottom: 15px;
    transition: opacity 1s;
}

#live2d-plugin:hover #live2d-tool {
    opacity: 1;
}

#live2d-tool span {
    display: block;
    height: 30px;
    text-align: center;
}

#live2d-tool svg {
    color: #7b8c9d;
    cursor: pointer;
    height: 25px;
    transition: fill .3s;
}

#live2d-tool svg:hover {
    color: #0684bd; /* #34495e */
}

#live2d-chat-model {
    position: fixed;
    right: 0;
    bottom: 30px;
    overflow: hidden;
    z-index: 999999;
    opacity: 0;
    transition: opacity 1s;
    width: 100%;
}

@media screen and (max-width: 768px) {
    #live2d-chat-model {
        z-index: 1;
        display: none;
    }
}

#live2d-chat-model.live2d-chat-model-active {
    opacity: 1;
}


#live2d-chat-model .live2d-chat-model-body {
    display: flex;
    height: 4vh;
    max-width: 30vw;
    background-color: #eff4f9;
    align-items: center;
    border-radius: 3px;
    margin: 0 auto;
}

#live2d-chat-model .live2d-chat-model-body .live2d-chat-content {
    height: 100%;
    width: 100%;
    padding: 5px 10px;
}

#live2d-chat-model .live2d-chat-model-body .live2d-chat-content input {
    outline: none;
    border: none;
    border: 0;
    height: 100%;
    width: 100%;
    background: white;
    padding: 5px;
    border-radius: 3px;
    font-size: 14px;
}

#live2d-chat-model .live2d-chat-model-body .live2d-chat-content input:focus {
    outline:none;
    border:0;
}

#live2d-chat-model .live2d-chat-model-body #live2d-chat-send {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 64%;
    width: 45px;
    background-color: #cecece;
    margin-right: 10px;
    border-radius: 3px;
    cursor: pointer;
}

#live2d-chat-model .live2d-chat-model-body #live2d-chat-send.active {
    background-color: #30cf79;
}

#live2d-chat-model .live2d-chat-model-body #live2d-chat-send.active:hover {
    background-color: #55bb8e;
}

@keyframes shake {
    2% {
        transform: translate(.5px, -1.5px) rotate(-.5deg);
    }

    4% {
        transform: translate(.5px, 1.5px) rotate(1.5deg);
    }

    6% {
        transform: translate(1.5px, 1.5px) rotate(1.5deg);
    }

    8% {
        transform: translate(2.5px, 1.5px) rotate(.5deg);
    }

    10% {
        transform: translate(.5px, 2.5px) rotate(.5deg);
    }

    12% {
        transform: translate(1.5px, 1.5px) rotate(.5deg);
    }

    14% {
        transform: translate(.5px, .5px) rotate(.5deg);
    }

    16% {
        transform: translate(-1.5px, -.5px) rotate(1.5deg);
    }

    18% {
        transform: translate(.5px, .5px) rotate(1.5deg);
    }

    20% {
        transform: translate(2.5px, 2.5px) rotate(1.5deg);
    }

    22% {
        transform: translate(.5px, -1.5px) rotate(1.5deg);
    }

    24% {
        transform: translate(-1.5px, 1.5px) rotate(-.5deg);
    }

    26% {
        transform: translate(1.5px, .5px) rotate(1.5deg);
    }

    28% {
        transform: translate(-.5px, -.5px) rotate(-.5deg);
    }

    30% {
        transform: translate(1.5px, -.5px) rotate(-.5deg);
    }

    32% {
        transform: translate(2.5px, -1.5px) rotate(1.5deg);
    }

    34% {
        transform: translate(2.5px, 2.5px) rotate(-.5deg);
    }

    36% {
        transform: translate(.5px, -1.5px) rotate(.5deg);
    }

    38% {
        transform: translate(2.5px, -.5px) rotate(-.5deg);
    }

    40% {
        transform: translate(-.5px, 2.5px) rotate(.5deg);
    }

    42% {
        transform: translate(-1.5px, 2.5px) rotate(.5deg);
    }

    44% {
        transform: translate(-1.5px, 1.5px) rotate(.5deg);
    }

    46% {
        transform: translate(1.5px, -.5px) rotate(-.5deg);
    }

    48% {
        transform: translate(2.5px, -.5px) rotate(.5deg);
    }

    50% {
        transform: translate(-1.5px, 1.5px) rotate(.5deg);
    }

    52% {
        transform: translate(-.5px, 1.5px) rotate(.5deg);
    }

    54% {
        transform: translate(-1.5px, 1.5px) rotate(.5deg);
    }

    56% {
        transform: translate(.5px, 2.5px) rotate(1.5deg);
    }

    58% {
        transform: translate(2.5px, 2.5px) rotate(.5deg);
    }

    60% {
        transform: translate(2.5px, -1.5px) rotate(1.5deg);
    }

    62% {
        transform: translate(-1.5px, .5px) rotate(1.5deg);
    }

    64% {
        transform: translate(-1.5px, 1.5px) rotate(1.5deg);
    }

    66% {
        transform: translate(.5px, 2.5px) rotate(1.5deg);
    }

    68% {
        transform: translate(2.5px, -1.5px) rotate(1.5deg);
    }

    70% {
        transform: translate(2.5px, 2.5px) rotate(.5deg);
    }

    72% {
        transform: translate(-.5px, -1.5px) rotate(1.5deg);
    }

    74% {
        transform: translate(-1.5px, 2.5px) rotate(1.5deg);
    }

    76% {
        transform: translate(-1.5px, 2.5px) rotate(1.5deg);
    }

    78% {
        transform: translate(-1.5px, 2.5px) rotate(.5deg);
    }

    80% {
        transform: translate(-1.5px, .5px) rotate(-.5deg);
    }

    82% {
        transform: translate(-1.5px, .5px) rotate(-.5deg);
    }

    84% {
        transform: translate(-.5px, .5px) rotate(1.5deg);
    }

    86% {
        transform: translate(2.5px, 1.5px) rotate(.5deg);
    }

    88% {
        transform: translate(-1.5px, .5px) rotate(1.5deg);
    }

    90% {
        transform: translate(-1.5px, -.5px) rotate(-.5deg);
    }

    92% {
        transform: translate(-1.5px, -1.5px) rotate(1.5deg);
    }

    94% {
        transform: translate(.5px, .5px) rotate(-.5deg);
    }

    96% {
        transform: translate(2.5px, -.5px) rotate(-.5deg);
    }

    98% {
        transform: translate(-1.5px, -1.5px) rotate(-.5deg);
    }

    0%, 100% {
        transform: translate(0, 0) rotate(0);
    }
}

